Fixed icon and weather data display issues

--- a/sunshinewear/src/main/res/values/strings.xml
+++ b/sunshinewear/src/main/res/values/strings.xml
@@ -1,6 +1,10 @@
-<resources>
+<resources xmlns:xliff="http://schemas.android.com/tools">
     <string name="app_name">SunshineWear</string>
     <string name="message">Watch face tapped</string>
     <string name="my_digital_name">My Digital</string>
     <string name="watchface_label">SunshineWatchFace</string>
+
+    <string name="format_temperature">
+        <xliff:g id="temp">%1.0f</xliff:g>\u00B0
+    </string>
 </resources>
